# cronus_offload

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  rebuild_softlink.sh
include/: cublasLt_desc.h  cublas_size.h  cuda_offset.h  cuda_table.h  debug.h  dispatch_header.h  network_macros.h  rt_cublas_header.h  rt_driver_header.h  tee_internal_api.h
include/rpc/: rpc.h
src/: cuda_runtime_caller.cpp
src/cublas/: CMakeLists.txt  cublasLt_api.cpp  cublasLt_desc_local.h  cublasXt_api.cpp  cublas_api.cpp  cublas_header.h
src/cuda/: CMakeLists.txt  cuda_driver_api.cpp  cuda_driver_header.h  cuda_driver_local.cpp
src/cudart/: CMakeLists.txt  FatBinary.cpp  FatBinary.h  cudaFatBinary.h  cuda_driver_api.cpp  cuda_elf.c  cuda_elf.h  cuda_runtime.edl  cuda_runtime_api.cpp  cuda_runtime_header.h  cuda_runtime_host.cpp  cuda_runtime_local.cpp  cuda_runtime_memory_dispatch.cpp  cuda_runtime_memory_header.h  cuda_runtime_u.h  cuda_version.h  kernel_demangle.cpp  kernel_demangle.h  rpc.c  rpc_main.c
src/cudaserver/: CMakeLists.txt  cublasLt_desc_local.h  cuda_driver_local.cpp  cuda_runtime_header.h  cuda_runtime_local.cpp  cuda_runtime_memory_dispatch.cpp  cuda_runtime_memory_header.h  cuda_runtime_t.cpp  cuda_runtime_t.h  dispatcher.c  hook.c  kernel_demangle.cpp  main.cpp
src/edger8r/linux/: Ast.ml  CodeGen.ml  Makefile  Parser.mly
src/edger8r/linux.new/_build/: Ast.cmi  Ast.cmo  Ast.cmx  CodeGen.cmi  CodeGen.cmo  CodeGen.cmx  CodeGen.ml.depends  Edger8r.cmi  Edger8r.cmo  Edger8r.cmx  Lexer.cmi  Lexer.cmo  Lexer.cmx  Lexer.ml  Parser.cmi  Parser.cmx  Parser.ml  Parser.mli  Plugin.cmi  Plugin.cmo  Plugin.cmx  Plugin.ml.depends  SimpleStack.cmo  Util.cmi  Util.cmo  _digests  _log  ocamlc.where
src/edger8r/linux/_build/: Ast.cmi  Ast.cmo  Ast.cmx  CodeGen.cmi  CodeGen.cmo  CodeGen.cmx  CodeGen.ml  CodeGen.ml.depends  Edger8r.cmi  Edger8r.cmo  Edger8r.cmx  Edger8r.native  Lexer.cmi  Lexer.cmo  Lexer.cmx  Lexer.ml  Lexer.mll  Parser.cmi  Parser.cmx  Parser.ml  Parser.mli  Parser.mly  Preprocessor.cmi  Preprocessor.cmo  Preprocessor.cmx  Preprocessor.ml  SimpleStack.cmi  SimpleStack.cmx  Util.cmx  Util.ml  _digests  _log
src/edl/: cublas.edl  cublasLt.edl  cublasXt.edl  cublas_api_v1.edl  cublas_api_v2.edl  cublas_api_v3.edl  cublas_vector.edl  cuda_driver.edl  cuda_driver_context.edl  cuda_driver_device.edl  cuda_driver_memory.edl  cuda_driver_primary_context.edl  cuda_runtime.edl  cuda_runtime_error.edl  cuda_runtime_memory.edl  cuda_runtime_stream.edl
src/shared/: cuda_runtime_memory_dispatch.cpp
src/test/: CMakeLists.txt
src/test/cukernel/: CMakeLists.txt  cukernel.cu  cukernel_only.cu
src/test/mnist/: CMakeLists.txt
src/test/mnist-old/: CMakeLists.txt
src/test/mnist-old/src/: configuration.hpp  main.cpp
src/test/mnist-old/src/tensor/: tensor.h
src/test/mnist/src/: configuration.cuh  init.cpp  main.cpp  main.cu
src/test/mnist/src/datasets/: mnist.cpp
src/test/mnist/src/layers/: relu_kernel.h
src/test/mnist/src/loggers/: csv_logger.cpp
src/test/mnist/src/loss/: crossentropy_kernel.h
src/test/nits/: CMakeLists.txt  cukernel_only.cu  func.export  test_cublas.cpp  test_cuda.cpp
